<resources>
    <string name="app_name">Word Card</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">User name</string>
    <string name="prompt_password">Password</string>
    <string name="pwd_check">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_text">No account? </string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_url"><a href="#">Sign up</a></string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Must provide username</string>
    <string name="invalid_password">Must provide password</string>
    <string name="invalid_lesson_name">Must provide lesson name</string>
    <string name="invalid_password_check">Must be as same as the password</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit profile</string>
    <string name="login_failed_text">User name or password error</string>
    <string name="edit">Edit</string>
    <string name="new_password">New password</string>
    <string name="new_pwd_check">Confirm new password</string>
    <string name="profile">Profile</string>
    <string name="success_edit">Successfully modified! Please login again.</string>
    <string name="new_lesson">New lesson</string>
    <string name="add_lesson">Lesson name</string>
    <string name="new_word">New word</string>
    <string name="word_detail">Detail</string>
    <string name="word_switch">Favorite card</string>
    <string name="add">Add</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="card">Card</string>
    <string name="words">Words</string>
</resources>