<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AddLessonActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_word"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/add_word_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_detail"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="40dp"/>

    <Button
        android:id="@+id/new_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:background="@drawable/bg_round_button"
        android:layout_gravity="center" />

</LinearLayout>